--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Controller for pihole to allow temporary disabling via web page",
   "main": "pihole-control.js",
   "dependencies": {
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "pug": "^0.1.0"
   },
   "devDependencies": {},
   "scripts": {
