--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "firebase": "^4.1.3",
+    "firebase-admin": "^5.0.0",
+    "firebase-token-generator": "^2.0.0",
     "morgan": "~1.8.1",
     "pug": "~2.0.0-beta11",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "sleep": "^5.1.1"
   }
 }
