--- a/package.json
+++ b/package.json
@@ -3,19 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "serve": "firebase serve -o 0.0.0.0"
   },
   "dependencies": {
-    "body-parser": "~1.17.1",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.3",
-    "express": "~4.15.2",
     "firebase": "^4.1.3",
     "firebase-admin": "^5.0.0",
-    "firebase-token-generator": "^2.0.0",
-    "morgan": "~1.8.1",
-    "pug": "~2.0.0-beta11",
-    "serve-favicon": "~2.4.2",
-    "sleep": "^5.1.1"
+    "firebase-token-generator": "^2.0.0"
   }
 }
